fixed gap under navbar and created Services folder and layout for services home

--- a/projects/client/clientnav.css
+++ b/projects/client/clientnav.css
@@ -16,7 +16,6 @@ nav {
 	background: rgba(156, 136, 236, 0.05);
 	border-bottom: 1px solid rgba(16, 8, 102, 0.1);
 	backdrop-filter: blur(15px);
-	margin-bottom: 2rem;
 
 	display: flex;
 	align-items: center;
@@ -24,7 +23,7 @@ nav {
 }
 
 .logo {
-	font-size: 1.8rem;
+	font-size: 2rem;
 	font-weight: 700;
 	color: #5e38f8;
 	letter-spacing: 1px;
@@ -40,7 +39,7 @@ nav {
 
 .nav-links li a {
 	position: relative;
-	font-size: 1.05rem;
+	font-size: 1.2rem;
 	font-weight: 500;
 	text-decoration: none;
 	color: #5e38f8;
@@ -63,7 +62,7 @@ nav {
 	font-size: 1rem;
 	background: #8166ee;
 	color: #0f122a;
-	box-shadow: 0 0 10px #9279f5;
+	box-shadow: 0 0 5px #9279f5;
 	border: none;
 	cursor: pointer;
 	transition: 0.3s;
